# album-fotos

./: .gitignore  COOLIFY_DEPLOYMENT.md  QUICK_START_COOLIFY.md  docker-compose.prod.yml  docker-compose.yaml
Backend/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  photos.json  pyproject.toml  requirements.txt
Backend/app/: auth.py  config.py  image_processing.py  indexing.py  main.py  photos.py  upload.py  utils.py
FE/: .env  Dockerfile  index.html  package.json
FE/src/: App.tsx
FE/src/components/: AlbumList.tsx  PhotoGrid.tsx  UploadForm.tsx
FE/src/components/ui/: PhotoGrid.tsx  UploadForm.tsx
FE/src/lib/: api.ts
FE/src/types/: uploads.ts
Frontend/: .dockerignore  Dockerfile  docker-compose.yaml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
Frontend/src/: App.tsx
Frontend/src/components/: AlbumList.tsx  PhotoGrid.tsx  UploadForm.tsx
Frontend/src/lib/: api.ts
Frontend/src/types/: photos.ts
